# CentralAuth-Rust-Demo

./: Cargo.toml  README.md
src/: main.rs  signing_certificate.rs
