[package]
name = "CentralAuth-Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
deviceid = "0.0.3"
json = "0.12.4"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"] }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
open = "5.3.3"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = ">=0.59, <0.60", features = [
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation"
] }
hex = "0.4"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"